--- a/package.json
+++ b/package.json
@@ -5,19 +5,28 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "prebuild": "tsc --noEmit",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start": "npm run build && npm run preview",
+    "start": "npm run prebuild && npm run build && npm run preview",
     "update:scss": "sass ./src/style.scss ./src/style.css && sass ./src/components/button/button.scss ./src/components/button/button.css && sass ./src/components/input/input.scss ./src/components/input/input.css && sass ./src/pages/profile/profile.scss ./src/pages/profile/profile.css && sass ./src/components/talking-area/talking-area.scss ./src/components/talking-area/talking-area.css && sass ./src/pages/change-profile/change-profile.scss ./src/pages/change-profile/change-profile.css && sass ./src/pages/change-password/change-password.scss ./src/pages/change-password/change-password.css && sass ./src/pages/navigation/navigation.scss ./src/pages/navigation/navigation.css && sass ./src/pages/error/error.scss ./src/pages/error/error.css"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.0.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-import-resolver-typescript": "^4.4.1",
+    "eslint-plugin-import": "^2.31.0",
     "sass": "^1.87.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
-    "vite": "^6.3.5"
+    "uuid": "^11.1.0"
   },
   "dependencies": {
     "handlebars": "^4.7.8",
-    "vite-plugin-handlebars": "^1.5.0"
+    "vite": "^5.4.19",
+    "vite-plugin-handlebars": "^2.0.0"
   },
   "engines": {
     "node": ">=22.14.0",
