--- a/package.json
+++ b/package.json
@@ -9,27 +9,44 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "npm run prebuild && npm run build && npm run preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "update:scss": "sass ./src/style.scss ./src/style.css && sass ./src/components/button/button.scss ./src/components/button/button.css && sass ./src/components/input/input.scss ./src/components/input/input.css && sass ./src/pages/profile/profile.scss ./src/pages/profile/profile.css && sass ./src/components/talking-area/talking-area.scss ./src/components/talking-area/talking-area.css && sass ./src/pages/change-profile/change-profile.scss ./src/pages/change-profile/change-profile.css && sass ./src/pages/change-password/change-password.scss ./src/pages/change-password/change-password.css && sass ./src/pages/navigation/navigation.scss ./src/pages/navigation/navigation.css && sass ./src/pages/error/error.scss ./src/pages/error/error.css"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-import-resolver-typescript": "^4.4.1",
-    "eslint-plugin-import": "^2.31.0",
+    "@eslint/js": "^9.28.0",
+    "@types/handlebars": "^4.0.40",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
+    "eslint": "^9.28.0",
     "sass": "^1.87.0",
+    "stylelint": "^16.20.0",
+    "stylelint-config-standard": "^38.0.0",
+    "stylelint-scss": "^6.12.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
-    "uuid": "^11.1.0"
+    "typescript-eslint": "^8.33.1"
   },
   "dependencies": {
     "handlebars": "^4.7.8",
-    "vite": "^5.4.19",
-    "vite-plugin-handlebars": "^2.0.0"
+    "uuid": "^11.1.0",
+    "vite": "^5.4.19"
   },
   "engines": {
     "node": ">=22.14.0",
     "npm": ">=10.9.2"
-  }
+  },
+  "description": "Макет проекта: https://www.figma.com/design/1jJxE4CMcqQONMjhRKwcr7/Chat_external_link--Copy-?node-id=0-1&p=f&t=cCar2hZWIq7EDqcN-0",
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Saika01/middle.messenger.praktikum.yandex.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Saika01/middle.messenger.praktikum.yandex/issues"
+  },
+  "homepage": "https://github.com/Saika01/middle.messenger.praktikum.yandex#readme"
 }
