--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "update:scss": "sass ./src/style.scss ./src/style.css && sass ./src/components/button/button.scss ./src/components/button/button.css && sass ./src/components/input/input.scss ./src/components/input/input.css && sass ./src/pages/profile/profile.scss ./src/pages/profile/profile.css && sass ./src/components/talking-area/talking-area.scss ./src/components/talking-area/talking-area.css && sass ./src/pages/change-profile/change-profile.scss ./src/pages/change-profile/change-profile.css && sass ./src/pages/change-password/change-password.scss ./src/pages/change-password/change-password.css && sass ./src/pages/navigation/navigation.scss ./src/pages/navigation/navigation.css && sass ./src/pages/error/error.scss ./src/pages/error/error.css"
   },
   "devDependencies": {
+    "vite": "^5.4.19",
     "@eslint/js": "^9.28.0",
     "@types/handlebars": "^4.0.40",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
@@ -29,8 +30,7 @@
   },
   "dependencies": {
     "handlebars": "^4.7.8",
-    "uuid": "^11.1.0",
-    "vite": "^5.4.19"
+    "uuid": "^11.1.0"
   },
   "engines": {
     "node": ">=22.14.0",
