--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
 
     "strict": true,
     "noImplicitAny": true,
+    "sourceMap": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
