--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "strict": true,
     "noImplicitAny": true,
     "sourceMap": true,
+    "strictNullChecks": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
